# bochsOS

./: CMakeLists.txt  README.md  bochsrc.disk  build.sh
include/kernel/: global.h  init.h  interrupt.h  io.h  memory.h  print.h  stdint.h  timer.h
include/lib/: bitmap.h  debug.h  print.h  string.h
src/boot/: asm.h  bootloader.asm  mbr.asm
src/kernel/: init.c  interrupt.c  kernel.S  kernel.asm  main.c  memory.c  timer.c
src/lib/: bitmap.c  debug.c  print.asm  string.c
src/lib/kernel/: print.asm
